# coma

./: AUTHORS  ChangeLog  Doxyfile  LICENSE  Makefile.in  README  README.md  aclocal.m4  coma.kdevelop  coma.kdevelop.pcs  coma.kdevses  configure  configure.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debug/: Makefile  config.h  config.status  libtool
debug/src/: Makefile
optimized/: Makefile  config.h  config.status  libtool
optimized/src/: Makefile
src/: Makefile.am  Makefile.in
src/blast2fa/: Makefile.in  blast2fa.pl
src/coma/: Makefile.am  Makefile.in  coma.cpp  coma.h  coma.obs.h
src/env/: Makefile.am  Makefile.in  coma.par.obs
src/ext/: Makefile.am  Makefile.in  psl.h  pslcodes.h  pslvector.cpp  pslvector.h
src/lmpi/: Makefile.am  Makefile.in  MessageDispatcher.cpp  MessageDispatcher.h  msgcodes.h
src/makedb/: Makefile.am  Makefile.in  makedb.cpp  makedb.h
src/makepro/: Makefile.am  Makefile.in  makepro.cpp  makepro.h
src/mpiscaler/: Makefile.am  Makefile.in  PScaler.cpp  PScaler.h  ParallelUniversalScoreMatrix.cpp  ParallelUniversalScoreMatrix.h  mpiscaler.cpp  mpiscaler.h  mpiscaler.sh
src/pcluster/: Makefile.am  Makefile.in  pcluster.cpp  pcluster.h
src/proview/: Makefile.am  Makefile.in  proview.cpp  proview.h
src/pscores/: Makefile.am  Makefile.in  pscores.cpp  pscores.h
src/pshuffler/: Makefile.am  Makefile.in  pshuffler.cpp  pshuffler.h
src/segpro/: Makefile.am  Makefile.in  segpro.cpp  segpro.h
src/simal/: Makefile.am  (+3 more)
win32/: Makefile  config.h  config.lt  config.status  libtool  lt-changes.txt
(+74 files in other folders)
